Bug 933883 - Only assert the length of the stored password text if the editor is able to get that information; r=roc